# basic-memory-uberspace

./: .dockerignore  .env.docker.example  .env.example  Caddyfile  DOCKER.md  Dockerfile  LICENSE  README.md  UBERSPACE.md  auth_gateway.py  docker-compose.yml  pyproject.toml  wsgidav.conf  wsgidav.yaml
docker/: entrypoint.sh  wsgidav.yaml
